Création d'un carnet de contact (under dev)
Le but du carnet d’adresse est de permettre à l’utilisateur de saisir les informations d’un contact et ensuite de les afficher dans une liste avec la possibilité de voir les détails du contact, mais également de le modifier.

--- a/Carnet de contacts/index.html
+++ b/Carnet de contacts/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Carnet d'adresses en Jquery</title>
-    <script src="https://kit.fontawesome.com/fc338e43d0.js"></script>
+    <title>Carnet de contacts en JQuery</title>
+    <script src="https://kit.fontawesome.com/your_personal_id"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> 
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/normalize.css">
