--- a/Carnet de contacts/index.html
+++ b/Carnet de contacts/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Carnet de contacts en JQuery</title>
-    <script src="https://kit.fontawesome.com/your_personal_id"></script>
+    <title>Carnet d'adresses en Jquery</title>
+    <script src="https://kit.fontawesome.com/fc338e43d0.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> 
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/normalize.css">
@@ -15,6 +15,11 @@
     <header class="container">
         <h1><i class="fas fa-book"></i> Carnet d'Adresses</h1>
         <section id="contactList"></section>
+        <div id="infosContact">
+            <h3></h3>
+            <p></p>
+            <a href="#">Editer contact</a>
+        </div>
         <div>
             <button id="plus"><i class="fas fa-plus"></i></button>
             <button id="effacer"><i class="far fa-trash-alt"></i></button>
